@@ -1,3 +1,6 @@
+(Andrea Bollini)
+- SF Patch #1597807 for SF bug #1597805 DIDL Crosswalk: wrong resource management
+
 (Claudia Juergen)
 - SF patch #1589930 for SF bug #1588625 Incorrect text on item mapper screen
 
